--- a/views/signin/password_reset.ejs
+++ b/views/signin/password_reset.ejs
@@ -1,4 +1,4 @@
-<%- include('layout') %>
+<%- include('../layout') %>
 
 <title><%= title %></title>
     <nav class="navbar">
@@ -6,7 +6,14 @@
             <a class="navbar-brand mx-auto fs-1" href="/myreads">my<span class="fw-bold">reads</span></a>
         </div>
     </nav>
-    <p class="create-account text-center fs-1">Create Account</p>
+    <div class="d-flex">
+        <p class="create-account text-center fs-1 fw-bold mx-auto">Create new password</p>
+    </div>
+    <div class="d-flex">
+        <p class="text-center mx-auto" style="width: 350px; color: #111127;">
+            We'll ask for this password whenever you Sign-In.
+        </p>
+    </div>
     <div id="register-error-message" class="mx-auto p-2 fw-bold" style="display: <% if(errors && errors.length > 0) { %>block<% } else { %>none<% } %>;">
         <% if(errors && errors.length > 0) { %>
             <ul>
@@ -16,19 +23,12 @@
             </ul>
         <% } %>
     </div>
-    <div class="container" style="width: 290px;">
-        <form class="text-center" action="/register" method="post">
+    <div class="container" style="width: 360px;">
+        <form class="text-center" action="/password_reset" method="post">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <input type="hidden" name="token" value="<%= token %>">
             <div class="mb-3 d-flex flex-column">
-                <label for="fullName" class="form-label me-auto">Your name</label>
-                <input type="text" class="form-control register-border-custom" id="fullName" name="fullName"  placeholder="First and last name" style="border-radius: 50px;">
-            </div>
-            <div class="mb-3 d-flex flex-column">
-                <label for="email" class="form-label register-form-label me-auto">Email</label>
-                <input type="email" class="form-control register-border-custom" id="email" name="email" style="border-radius: 50px;">
-            </div>
-            <div class="mb-3 d-flex flex-column">
-                <label for="password" class="form-label me-auto">Password</label>
+                <label for="password" class="form-label me-auto">New Password</label>
                 <input type="password" class="form-control register-border-custom" id="password" name="password" placeholder="At least 6 characters" style="border-radius: 50px;">
             </div>
             <div class="mb-3 d-flex flex-column">
@@ -36,6 +36,6 @@
                 <input type="password" class="form-control register-border-custom" id="re-enter-password" name="re-enter-password" style="border-radius: 50px;">
             </div>
 
-            <button type="submit" class="register-custom-button mb-5">Create account</button>
+            <button type="submit" class="register-custom-button mb-5">Save changes and Sign-In</button>
         </form>
     </div>
