--- a/views/signin/signin.ejs
+++ b/views/signin/signin.ejs
@@ -1,4 +1,4 @@
-<%- include('layout') %>
+<%- include('../layout') %>
 
 <title><%= title %></title>         
 
@@ -10,7 +10,6 @@
     
         <div class="col-md-6 me-auto">
             <div class="card sign-up-custom-card p-4">
-                <!-- Your sign up form or content goes here -->
                 <h2 class="text-center fs-4 fw-bold mb-3">Sign in to Myreads</h2>
                 <a href="/signin_with_email" class="btn btn-block mx-auto btn-sign-up">Sign in with email</a>
                 <p class="text-center mt-3 mb-0 sign-up-small" >Not a member? <a class="text-decoration-none" href="/signup">Sign up</a></p>
