--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,7 +77,7 @@ width: 100%;
 }
 
 .register-custom-button:hover {
-    background-color: #333333; /* Change background color on hover */
+    background-color: #333333; 
 }
 
 #register-error-message {
@@ -156,12 +156,6 @@ width: 100%;
     font-family: Helvetica, Arial, sans-serif;
 }
 
-.btn-google {
-    border: 1px solid #000000;
-    width: 50%;
-    color: #000000;
-}
-
 .signin-custom-button {
     background-color: #ffffff;
     border-radius: 15%;
@@ -213,14 +207,6 @@ width: 100%;
     color:#1e1915 !important
 }
 
-.new-releases .rating{
-    font-weight: 600; 
-    font-family: Arial, sans-serif; 
-    font-size: 14px; 
-    line-height: 18px; 
-    color: #1e1915
-}
-
 .new-releases .content{
     font-family: Arial, sans-serif; 
     font-style: italic; 
@@ -250,17 +236,6 @@ width: 100%;
     margin-top: -10px; /* Adjust button position */
 }
 
-.btn-want-to-read {
-    background-color: #3f8363;
-    color: #ffffff;
-    border-radius: 15%;
-    transition: background-color 0.3s ease; /* Add transition for smooth hover effect */
-}
-
-.btn-want-to-read:hover {
-    background-color: #609f7d !important; /* Change background color on hover */
-}
-
 .read-more-button {
     background-color: #333333;
     border-radius: 15%;
@@ -271,88 +246,6 @@ width: 100%;
 .read-more-button:hover {
     background-color: #1e192b; 
     color: #ffffff; 
-}
-
-.rating-bar {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-.rating-bar .progress {
-    flex-grow: 1;
-    margin-left: 10px;
-    margin-right: 10px;
-    height: 8px;
-    background-color: #e9ecef;
-}
-.rating-bar .progress-bar {
-    background-color: #e87400;
-}
-.rating-bar .rating-text {
-    min-width: 40px;
-}
-
-.search-filter-container {
-    display: flex;
-    align-items: center;
-}
-.search-input {
-    border-radius: 50px;
-    border: 2px solid #8c817a;
-    padding-left: 15px;
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
-}
-.search-input input {
-    border: none;
-    outline: none;
-    flex-grow: 1;
-    border-radius: 50px;
-    padding-left: 10px;
-    height: 30px; 
-}
-.filter-button {
-    border-radius: 50px;
-    border: 1px solid #8c817a;
-    background-color: white;
-    padding: 0.375rem 0.75rem;
-    margin-left: 10px;
-    display: flex;
-    align-items: center;
-}
-.filter-button i {
-    margin-right: 5px;
-}
-
-.bi-star {
-    cursor: pointer;
-    transition: color 0.2s;
-}
-
-.star {
-    font-size: 2rem;
-    color: #e87400;
-    position: relative;
-    display: inline-block;
-}
-
-.empty-star {
-    color: #e0e0e0;
-}
-
-.half-star {
-    position: relative;
-    display: inline-block;
-    font-size: 2rem;
-}
-
-.half-star .half-fill {
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    white-space: nowrap;
 }
 
 .genre-link:hover {
@@ -429,7 +322,7 @@ width: 100%;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #ccc; /* Placeholder background color */
+    background-color: #ccc; 
     margin-right: 10px;
 }
 
@@ -439,7 +332,7 @@ width: 100%;
     font-size: 14px;
     border: 1px solid #ccc;
     border-radius: 10%;
-    resize: vertical; /* Allow vertical resizing */
+    resize: vertical;
 }
 
 .comment-submit {
@@ -482,7 +375,7 @@ width: 100%;
 }
 
 .dropdown-large {
-    width: 400px; /* Adjust width as necessary */
+    width: 400px; 
 }
 .dropdown-header {
     font-family: Helvetica, sans-serif;
