--- a/views/admin/add_book.ejs
+++ b/views/admin/add_book.ejs
@@ -3,7 +3,7 @@
 <title><%= title %></title>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand fs-1" href="/myreads">my<span class="fw-bold">reads</span></a>
+            <a class="navbar-brand fs-1" href="/">my<span class="fw-bold">reads</span></a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
