--- a/views/admin/edit_book.ejs
+++ b/views/admin/edit_book.ejs
@@ -1,10 +1,10 @@
-<%- include('layout') %>
+<%- include('../layout') %>
 
 <title><%= title %></title>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand fs-1" href="/myreads">my<span class="fw-bold">reads</span></a>
+        <a class="navbar-brand fs-1" href="/">my<span class="fw-bold">reads</span></a>
     </div>
 </nav>
 
