--- a/views/account_settings/delete_account.ejs
+++ b/views/account_settings/delete_account.ejs
@@ -25,6 +25,8 @@
     </div>
 </div>
 
+<%- include('../footer') %>
+
 <script>
 function confirmDeletion() {
     const checkbox = document.getElementById('keepPostsAnonymously');
