--- a/views/new_releases.ejs
+++ b/views/new_releases.ejs
@@ -23,7 +23,7 @@
                                 </a>
                             </div>
                             <div class="col-md-8 new-releases mb-5">
-                                <div class="mb-1 book-number">#<%= (currentPage - 1) * 10 + index + 1 %></div>
+                                 <div class="mb-1 book-number">#<%= (currentPage - 1) * 10 + index + 1 %></div>
                                 <div class="mb-1">
                                     <a class="text-decoration-none book-description" href="/book/<%= book._id %>/details">
                                         <%= book.title %>
@@ -67,3 +67,4 @@
     </div>
 </div>
 <
+<%- include('footer') %>
