--- a/views/bookDetails/book_details.ejs
+++ b/views/bookDetails/book_details.ejs
@@ -240,6 +240,8 @@
     </div>
   </div>
 
+  <%- include('../footer') %>
+
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         var showMoreReviewLinks = document.querySelectorAll(".show-more-link");
