--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -51,7 +51,7 @@
         </div>
     </div>
 </div>
-
+<%- include('footer') %>
 <script>
     function confirmDelete(commenterId, bookId) {
         if (confirm("Are you sure you want to delete this comment?")) {
