--- a/views/mybooks.ejs
+++ b/views/mybooks.ejs
@@ -107,7 +107,7 @@
         </div>
     </div>
 </div>
-
+<%- include('footer') %>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         var showMoreReviewLinks = document.querySelectorAll(".show-more-link");
