--- a/views/write_review.ejs
+++ b/views/write_review.ejs
@@ -32,6 +32,7 @@
             </button>
         </form>
     </div>
+    <%- include('footer') %>
 <script>
         tinymce.init({
             selector: '#review',
