added link to the twitter icon in footer; changed all links to /myreads to /

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,9 @@
 CONNECT
 </div>
 <div class="mx-auto" style="color: #767676;">
-    <i class="bi bi-twitter fs-2"></i>
+    <a href="https://twitter.com/chistev12" target="_blank" rel="noopener noreferrer">
+        <i class="bi bi-twitter fs-2"></i>
+      </a>      
 </div>
 <div style="font-family: Helvetica, sans-serif; color: #767676;">
     © 2024 Chistev, Inc.
