--- a/views/registration/favorite-genre.ejs
+++ b/views/registration/favorite-genre.ejs
@@ -5,7 +5,7 @@
 <body class="favorite-genre-body">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid favorite-genre-container-myreads">
-            <a class="navbar-brand fs-3 custom-navbar-brand" href="/myreads">my<span class="fw-bold">reads</span></a>
+            <a class="navbar-brand fs-3 custom-navbar-brand" href="/">my<span class="fw-bold">reads</span></a>
             <span class="navbar-text fs-5 ms-5">Getting Started</span>
         </div>
     </nav>
