--- a/views/registration/signup.ejs
+++ b/views/registration/signup.ejs
@@ -12,7 +12,7 @@
 <body class="signup-body">
     <div class="row justify-content-center">
         <div class="col-md-3">
-            <a class="custom-navbar-brand fs-3 text-decoration-none" href="/myreads">my<span class="fw-bold">reads</span></a>
+            <a class="custom-navbar-brand fs-3 text-decoration-none" href="/">my<span class="fw-bold">reads</span></a>
         </div>
     
         <div class="col-md-6 me-auto">
