--- a/views/signin/signin_with_email.ejs
+++ b/views/signin/signin_with_email.ejs
@@ -3,7 +3,7 @@
 <title><%= title %></title>
     <nav class="navbar">
         <div class="container-fluid">
-            <a class="navbar-brand mx-auto fs-1" href="/myreads">my<span class="fw-bold">reads</span></a>
+            <a class="navbar-brand mx-auto fs-1" href="/">my<span class="fw-bold">reads</span></a>
         </div>
     </nav>
     <p class="create-account text-center fs-1 fw-bold">Sign in</p>
