--- a/views/admin/edit_book_form.ejs
+++ b/views/admin/edit_book_form.ejs
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand fs-1" href="/myreads">my<span class="fw-bold">reads</span></a>
+        <a class="navbar-brand fs-1" href="/">my<span class="fw-bold">reads</span></a>
     </div>
 </nav>
 
