--- a/views/signin/password_reset_email_sent.ejs
+++ b/views/signin/password_reset_email_sent.ejs
@@ -3,7 +3,7 @@
 <title><%= title %></title>
     <nav class="navbar">
         <div class="container-fluid">
-            <a class="navbar-brand mx-auto fs-1" href="/myreads">my<span class="fw-bold">reads</span></a>
+            <a class="navbar-brand mx-auto fs-1" href="/">my<span class="fw-bold">reads</span></a>
         </div>
     </nav>
     <div class="d-flex">
