added console statement to debug session data

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,7 @@
 CONNECT
 </div>
 <div class="mx-auto" style="color: #767676;">
-    <a href="https://twitter.com/chistev12" target="_blank" rel="noopener noreferrer">
+    <a href="https://twitter.com/chistev12" target="_blank" rel="noopener noreferrer" style="color: #767676;">
         <i class="bi bi-twitter fs-2"></i>
       </a>      
 </div>
