--- a/views/category.ejs
+++ b/views/category.ejs
@@ -14,29 +14,37 @@
             </div>
             <hr>
             <div class="row">
-                <% books.forEach(book => { %>
-                    <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-4">
-                        <a href="/book/<%= book._id %>/details">
-                            <img src="<%= book.image %>" class="img-fluid rounded" alt="<%= book.title %>">
-                        </a>
-                        
+                <% if (books.length === 0) { %>
+                    <div class="col-12">
+                        <p>No books found in this category.</p>
                     </div>
-                <% }); %>
+                <% } else { %>
+                    <% books.forEach(book => { %>
+                        <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-4">
+                            <a href="/book/<%= book._id %>/details">
+                                <img src="<%= book.image %>" class="img-fluid rounded" alt="<%= book.title %>">
+                            </a>
+                        </div>
+                    <% }); %>
+                <% } %>
             </div>
         </div>
-        <div class="col-md-4 mt-5">
+        <div class="col-12 col-md-4 mt-5">
             <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 24px; color: #382110;">
                 Other Genres
             </div>
             <hr>
-            <div class="d-flex">
-                <% allGenres.forEach(genre => { %>
-                    <div class="ms-2" style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
-                        <a href="/genre/<%= genre.name %>" style="text-decoration: none; color: #00635d;"><%= genre.name %></a>
+            <div class="row">
+                <div class="col-12">
+                    <div class="d-flex flex-wrap">
+                        <% allGenres.forEach(genre => { %>
+                            <div class="ms-2 mb-2" style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
+                                <a href="/genre/<%= genre.name %>" style="text-decoration: none; color: #00635d;"><%= genre.name %></a>
+                            </div>
+                        <% }); %>
                     </div>
-                <% }); %>
+                </div>
             </div>
-            
         </div>
     </div>
 </div>
