--- a/views/mybooks.ejs
+++ b/views/mybooks.ejs
@@ -75,7 +75,7 @@
                                         <div class="review-container">
                                             <div class="mt-2 review-content-short">
                                                 <% if (book.userReview) { %>
-                                                    <%- book.userReview.truncatedContent %>
+                                                    <%= book.userReview.truncatedContent %>
                                                     <div class="show-more-button">
                                                         <a class="text-decoration-none show-more-link" data-review-id="<%= book.userReview._id %>" data-book-id="<%= book._id %>" href="#">
                                                             Show more &#9662;
@@ -132,7 +132,7 @@
                     .then(data => {
                         console.log("Received review data:", data);
                         reviewContentShort.style.display = 'none';
-                        reviewContentFull.innerHTML = data.content;
+                        reviewContentFull.innerHTML = `<p class="mb-2">${data.content}</p>`;
                         reviewContentFull.style.display = 'block';
                     })
                     .catch(error => {
